--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Your Name
-position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
-keywords: minimal academic
-google_scholar: https://scholar.google.com/
-github_link: https://github.com/yaoyao-liu/minimal-light
-linkedin: https://www.linkedin.com/
+title: Rennan C. Lima
+position: MSc. Student
+affiliation: UFMG
+email: rennancordeiro (at) dcc.ufmg.br
+keywords: information retrieval
+google_scholar: https://scholar.google.com/citations?user=CIopUhUAAAAJ&hl=en
+github_link: https://github.com/rennancl
+linkedin: https://www.linkedin.com/in/rennan-cordeiro-093b66140/
 avatar: ./assets/img/avatar.png
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
