--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ keywords: information retrieval
 google_scholar: https://scholar.google.com/citations?user=CIopUhUAAAAJ&hl=en
 github_link: https://github.com/rennancl
 linkedin: https://www.linkedin.com/in/rennan-cordeiro-093b66140/
-avatar: ./assets/img/avatar.png
+avatar: ./assets/img/me.png
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
