--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@ keywords: information retrieval
 google_scholar: https://scholar.google.com/citations?user=CIopUhUAAAAJ&hl=en
 github_link: https://github.com/rennancl
 linkedin: https://www.linkedin.com/in/rennan-cordeiro-093b66140/
-avatar: ./assets/img/me.png
+avatar: ./assets/img/me.jpg
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
-canonical: https://minimal-light.yyliu.net/
+canonical: https://rennancl.github.io/
 remote_theme: yaoyao-liu/minimal-light
 
 exclude:
