--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ email: rennancordeiro (at) dcc.ufmg.br
 keywords: information retrieval
 google_scholar: https://scholar.google.com/citations?user=CIopUhUAAAAJ&hl=en
 github_link: https://github.com/rennancl
+twitter: https://twitter.com/clrennan
 linkedin: https://www.linkedin.com/in/rennan-cordeiro-093b66140/
 avatar: ./assets/img/me.jpg
 google_analytics: UA-111540567-4
